# src/shared/api/relics.ts
@@ -25,8 +25,7 @@ export function searchRelics(
     SlotTypeId: params.slotTypeId,
     Race: params.race,
     SoulLevel: params.soulLevel,
-    MainAttributeId: params.mainAttributeId,
-    AdditionalAttributeIds: params.additionalAttributeIds,
+    MainAttributeIds: params.mainAttributeIds,
     AdditionalAttributes: params.additionalAttributes,
     MinPrice: params.minPrice != null ? params.minPrice * 100 : undefined,
     MaxPrice: params.maxPrice != null ? params.maxPrice * 100 : undefined,
@@ -59,20 +58,20 @@ export function getPriceTrends(
   return proxyRequest<GetPriceTrendsResponse>('getPriceTrends', {
     startDate: params.startDate,
     endDate: params.endDate,
-    relicDefinitionId: params.relicDefinitionId,
-    soulLevel: params.soulLevel,
     soulType: params.soulType,
+    slotTypeId: params.slotTypeId,
+    race: params.race,
+    soulLevel: params.soulLevel,
+    mainAttributeIds: params.mainAttributeIds,
+    additionalAttributes: params.additionalAttributes,
+    minPrice: params.minPrice,
+    maxPrice: params.maxPrice,
     serverId: params.serverId,
+    minEnhancementLevel: params.minEnhancementLevel,
+    maxEnhancementLevel: params.maxEnhancementLevel,
+    minAbsorbExperience: params.minAbsorbExperience,
+    maxAbsorbExperience: params.maxAbsorbExperience,
     groupBy: params.groupBy,
-    'mainAttribute.id': params.mainAttribute?.id,
-    'mainAttribute.minValue': params.mainAttribute?.minValue,
-    'mainAttribute.maxValue': params.mainAttribute?.maxValue,
-    ...params.additionalAttributes?.reduce((acc, attr, i) => ({
-      ...acc,
-      [`additionalAttributes[${i}].id`]: attr.id,
-      [`additionalAttributes[${i}].minValue`]: attr.minValue,
-      [`additionalAttributes[${i}].maxValue`]: attr.maxValue,
-    }), {}),
   }, signal)
 }
 
